--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   },
   "parserOptions": {
     "ecmaVersion": 2022
-  },
+},
   "plugins": ["prettier", "mocha"],
   "rules": {
     "prettier/prettier": "error",
@@ -30,16 +30,23 @@
     "node/no-unsupported-features/es-syntax": [
       "error",
       {
-        "version": ">=14.0.0",
-        "ignores": []
+        "version": ">=14.0.0"
+      
       }
+    
     ],
     "node/no-unsupported-features/es-builtins": [
       "error",
       {
-        "version": ">=14.0.0",
-        "ignores": []
+        "version": ">=14.0.0"
       }
-    ]
+    ],
+    "node/no-unsupported-features/node-builtins": [
+  "error",
+  {
+    "version": ">=14.0.0"
+  }
+]
   }
 }
+  
