fix: update start script for Render deployment

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
 # SERVER
-PORT=
+PORT=8811
 
 # LOGGER
-PINO_LOG_LEVEL=
-SHOW_RAW_HEADERS=
-LOG_APP_REQUEST=
+git commit --amend -m "chore: add dummy build script for deployment"
